--- a/AppHelp_02/app/src/main/res/values/colors.xml
+++ b/AppHelp_02/app/src/main/res/values/colors.xml
@@ -9,4 +9,10 @@
     <color name="divider">#66CCFF </color>
     <color name="background_listView">#F5F5F5</color>
     <color name="hora">#F0F8FF</color>
+
+    <color name="Red">#ff0000</color>
+    <color name="White">#ffffff</color>
+    <color name="Black">#000000</color>
+    <color name="Green">#00ff00</color>
+
 </resources>
