--- a/AppHelp/app/src/main/res/layout/cabecalho_tabela.xml
+++ b/AppHelp/app/src/main/res/layout/cabecalho_tabela.xml
@@ -5,62 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25">
+        <TableRow>
+
+            <TextView
+                android:id="@+id/nomeID"
+                android:text="Aluno  "
+                android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/dataID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Data"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25">
+                android:text="Data  "
+                android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/entradaID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Entrada"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25">
+                android:text="Entrada"
+                android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/saidaID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Saída"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25">
+                android:text="Saída  "
+                android:layout_weight="1"/>
 
             <TextView
                 android:id="@+id/duracaoID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Duração"/>
+                android:text="Duração"
+                android:layout_weight="1"/>
 
-        </LinearLayout>
+        </TableRow>
+    </TableLayout>
 
-    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
