--- a/AppHelp/app/src/main/res/layout/tabela_horarios.xml
+++ b/AppHelp/app/src/main/res/layout/tabela_horarios.xml
@@ -3,58 +3,31 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+<TableLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25">
+    <TableRow>
+        <TextView
+            android:text="Aluno  "
+            android:layout_weight="1"/>
+        <TextView
+            android:text="Data  "
+            android:layout_weight="1"/>
 
-            <TextView
-                android:id="@+id/dataID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+        <TextView
+            android:text="Entrada"
+            android:layout_weight="1"/>
 
-        </LinearLayout>
+        <TextView
+            android:text="Saída  "
+            android:layout_weight="1"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25">
+        <TextView
+            android:text="Duração"
+            android:layout_weight="1"/>
+    </TableRow>
 
-            <TextView
-                android:id="@+id/entradaID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+</TableLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25">
-
-            <TextView
-                android:id="@+id/saidaID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25">
-
-            <TextView
-                android:id="@+id/duracaoID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
