--- a/AppHelp/app/src/main/res/layout/activity_atividades.xml
+++ b/AppHelp/app/src/main/res/layout/activity_atividades.xml
@@ -1,26 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+            android:layout_height="250dp">
 
-            <ScrollView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="250dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nome Completo"
+                    android:textAlignment="center"
+                    android:textSize="25dp"/>
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TableRow>
+                        <TextView
+                            android:text="Data  "
+                            android:layout_weight="1"/>
+
+                        <TextView
+                            android:text="Entrada"
+                            android:layout_weight="1"/>
+
+                        <TextView
+                            android:text="Saída  "
+                            android:layout_weight="1"/>
+
+                    </TableRow>
+
+                </TableLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <ListView
                         android:layout_width="match_parent"
@@ -30,8 +60,15 @@
 
                 </LinearLayout>
 
-            </ScrollView>
+            </LinearLayout>
 
+        </ScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textoMarcacaoID"
@@ -83,11 +120,16 @@
 
             <Button
                 android:id="@+id/botaoVoltarIDAddHr"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Voltar" />
         </LinearLayout>
 
-    </ScrollView>
+
+
+    </LinearLayout>
+
+
+
 </android.support.constraint.ConstraintLayout>
