--- a/AppHelp/app/src/main/res/layout/activity_criar_atividade.xml
+++ b/AppHelp/app/src/main/res/layout/activity_criar_atividade.xml
@@ -7,10 +7,8 @@
     tools:context="es.inatel.br.apphelp.control.CriarAtividadeActivity">
 
     <ScrollView
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,6 +65,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp">
+
+                <EditText
+                    android:id="@+id/nomeAtividadeID"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Nome da atividade"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginBottom="20dp">
 
@@ -79,16 +91,10 @@
                 <Spinner
                     android:id="@+id/tipoID"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"                        >
                 </Spinner>
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="20dp">
 
             </LinearLayout>
 
@@ -101,13 +107,15 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tempo mensal obrigatorio: "
+                    android:text="Tempo mensal: "
                     android:textSize="22sp"/>
 
                 <Spinner
                     android:id="@+id/tempoID"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"></Spinner>
+                    android:layout_height="wrap_content">
+
+                </Spinner>
             </LinearLayout>
 
             <LinearLayout
@@ -117,30 +125,52 @@
                 android:layout_marginBottom="20dp">
 
                 <Button
+                    android:id="@+id/adicionarAlunoID"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Adicionar Aluno"/>
 
                 <AutoCompleteTextView
+                    android:id="@+id/autoCompleteID"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nome do Aluno"/>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <ListView
+                <TextView
+                    android:id="@+id/alunoSelecAtividadeID"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:textSize="25sp"
+                    android:layout_weight="0.7"
+                    android:hint="Nenhum aluno adicionado"/>
+
+                <ImageButton
+                    android:id="@+id/removerAlunoAtivID"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleX="0.6"
+                    android:scaleY="0.6"
+                    android:src="@drawable/cancel"
+                    android:visibility="invisible"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/erroAtividadeID"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp">
-
-            </ListView>
+                style="@style/mensagem_erro"/>
 
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <Button
-                    android:id="@+id/botaoVoltarIDCriarAtiv"
+                    android:id="@+id/voltarAtivID"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
@@ -149,6 +179,7 @@
                     android:text="Voltar" />
 
                 <Button
+                    android:id="@+id/criarAtividadeID"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:text="Criar"
